[package]
name = "word-games-bot"
version = "0.1.0"
authors = ["Lucas Santana <lvcs@cin.ufpe.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tbot = "0.6"
tokio = { version = "0.2", features = ["macros", "sync"] }
